[gd_scene load_steps=2 format=3 uid="uid://bc6xvon0xkp0j"]

[ext_resource type="Script" path="res://Scenes/Points/Points.gd" id="1_d0ps6"]

[node name="Points" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0ps6")

[node name="ContainerPoints" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ContainerPoints"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.690196, 0.690196, 0.690196, 1)

[node name="LabelPoints" type="Label" parent="ContainerPoints/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -13.0
offset_right = 16.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "0.00"

[node name="TimerPoints" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="TimerPoints" to="." method="_on_timer_points_timeout"]
